static/messages.css
/* ... */
.button-flex {
  display: flex;
  flex-direction: row-reverse;
}

@media (max-width: 768px) {
  .one-document {
    padding-right: 0;
  }

  #diagramDlg {
    width: 96dvh;
    height: 88dvw;
    max-height: 88dvw !important;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(90deg);
    margin: 0;
    max-width: 96dvh;
    border: none;
    box-sizing: border-box;
  }

  #diagramDlg .mobile-flex {
    display: flex !important;
    flex-direction: column;
    justify-content: flex-end;
    height: 100%;
    box-sizing: border-box;
  }

  #diagramDlg .gant-parent {
    max-width: 100%;
    min-width: 0;
    min-height: 0;
    max-height: calc(100% - 90px);
    /* Leave room for button */
    flex: 1;
    margin-bottom: 4px;
  }

  #close_diagram_btn {
    max-width: 200px;
    width: auto !important;
    align-self: center;
    margin: 0 auto !important;
  }

  .Gant div {
    font-size: 0.8rem;
  }

}

